Fix DCHECK.

SuggestExactInput() was being called with the wrong value for |trim_http|.  We
want to trim HTTP only when the user hasn't explicitly typed it, but instead we
were trying to trim it only _if_ the user explicitly typed it.

This has been wrong since this code was introduced in
https://codereview.chromium.org/58553003/ .

BUG=603839
TEST=In a debug build, use the omnibox to navigate to "http://ab cd" (no quotes).  This should not DCHECK.

Review-Url: https://codereview.chromium.org/2046263002
Cr-Commit-Position: refs/heads/master@{#399014}

Former-commit-id: 25a43970447cb8760dde96b9ec6875371dbd07f8